# memsnap

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/impl/: linux.rs  win.rs
