[package]
name = "memsnap"
version = "0.1.0"
edition = "2021"
description = "A library for creating memory snapshots and views with copy-on-write semantics."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jprendes/memsnap"
repository = "https://github.com/jprendes/memsnap"

[dependencies]
bitflags = "2.9"
page_size = "0.6.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3.20.0"
segv-test = "0.1"
